--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -3,16 +3,19 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      List
+    <ion-title id="tato">
+      Materiales
     </ion-title>
+    <ion-button slot="end" href="/carrito">
+      <ion-icon name="cart"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
+      <!--<ion-icon [name]="item.icon" slot="start"></ion-icon>-->
       {{item.title}}
       <div class="item-note" slot="end">
         {{item.note}}
