--- a/Ionic/src/theme/variables.scss
+++ b/Ionic/src/theme/variables.scss
@@ -3,12 +3,12 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #ff420b;
-  --ion-color-primary-rgb: 255,66,11;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #e03a0a;
-  --ion-color-primary-tint: #ff5523;
+  --ion-color-primary: #f17a32;
+  --ion-color-primary-rgb: 241,122,50;
+  --ion-color-primary-contrast: #fff;
+  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-shade: #d46b2c;
+  --ion-color-primary-tint: #f28747;
 
   --ion-color-secondary: #0cd1e8;
   --ion-color-secondary-rgb: 12,209,232;
