--- a/Ionic/src/app/list/list.page.scss
+++ b/Ionic/src/app/list/list.page.scss
@@ -4,3 +4,9 @@
   font-weight: bold;
 //  background-color:#333;
 }
+.carritoNo{
+  background-color: primary;
+}
+.carritoSi{
+  background-color: success; 
+}
