--- a/Ionic/src/app/list/list.page.html
+++ b/Ionic/src/app/list/list.page.html
@@ -6,9 +6,9 @@
     <ion-searchbar placeholder="Buscar">
 
     </ion-searchbar>
-    <ion-button slot="end" href="/carrito">
+    <ion-button slot="end" (click)="irACarrito()">
       <ion-icon name="cart" slot="start"></ion-icon>
-      <ion-label slot="end">{{carrito.Cantidad()}}</ion-label>
+      <ion-label slot="end">{{variables.carrito.Cantidad()}}</ion-label>
     </ion-button>
   </ion-toolbar>
 </ion-header>
