--- a/Ionic/src/theme/variables.scss
+++ b/Ionic/src/theme/variables.scss
@@ -52,9 +52,9 @@
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
 
-  --ion-color-medium: #989aa2;
+  --ion-color-medium: #e3e3e3;
   --ion-color-medium-rgb: 152,154,162;
-  --ion-color-medium-contrast: #ffffff;
+  --ion-color-medium-contrast: #000;
   --ion-color-medium-contrast-rgb: 255,255,255;
   --ion-color-medium-shade: #86888f;
   --ion-color-medium-tint: #a2a4ab;
