--- a/Ionic/src/app/list/list.page.scss
+++ b/Ionic/src/app/list/list.page.scss
@@ -4,9 +4,6 @@
   font-weight: bold;
 //  background-color:#333;
 }
-.carritoNo{
-  background-color: primary;
-}
-.carritoSi{
-  background-color: success; 
+.gray{
+  color: medium;
 }
