--- a/Ionic/src/app/list/material/material.page.html
+++ b/Ionic/src/app/list/material/material.page.html
@@ -1,9 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>material</ion-title>
+    <ion-title>{{item.titulo}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item>
+      <ion-label slot="start">ID</ion-label>
+      <ion-label slot="end">{{item.id}}</ion-label>
+    </ion-item>
+    <ion-item color="medium">
+      <ion-label slot="start">Título</ion-label>
+      <ion-label slot="end">{{item.titulo}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label slot="start">Autor</ion-label>
+      <ion-label slot="end">{{item.autor}}</ion-label>
+    </ion-item>
+    <ion-item color="medium">
+      <ion-label slot="start">Precio</ion-label>
+      <ion-label slot="end">{{item.precio}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label slot="start">En stock</ion-label>
+      <ion-label slot="end">{{item.stock}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
