--- a/Ionic/src/app/carrito/carrito.page.html
+++ b/Ionic/src/app/carrito/carrito.page.html
@@ -1,12 +1,40 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title >Carrito</ion-title>
+    <ion-title>Carrito</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>Item 1</ion-item>
-    <ion-item>Item 2</ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row class="gridHeader">
+      <ion-col>Título</ion-col>
+      <ion-col>Autor</ion-col>
+      <ion-col>Proveedor</ion-col>
+      <ion-col>Precio</ion-col>
+      <ion-col>Stock</ion-col>
+      <ion-col>Carrito</ion-col>
+    </ion-row>
+    <ion-row *ngFor="let item of items; let i = index" [class.gray]="i%2==1">
+      <ion-col (click)="clickMaterial(item)">{{item.titulo}}</ion-col>
+      <ion-col (click)="clickMaterial(item)">{{item.autor}}</ion-col>
+      <ion-col (click)="clickMaterial(item)">{{item.proveedor}}</ion-col>
+      <ion-col (click)="clickMaterial(item)">{{item.precio}}</ion-col>
+      <ion-col (click)="clickMaterial(item)">{{item.stock}}</ion-col>
+      <ion-col>
+        <div>
+          <ion-button (click)="agregarCarrito(item)" *ngIf="item.carrito == 0" color="primary">
+            <ion-icon name="cart" slot="start"></ion-icon>
+            <ion-label slot="end">{{item.carrito}}</ion-label>
+          </ion-button>
+          <ion-button (click)="aumentar(item)" *ngIf="item.carrito > 0" color="success">
+            <ion-icon name="cart" slot="start"></ion-icon>
+            <ion-label slot="end">{{item.carrito}}</ion-label>
+          </ion-button>
+          <ion-button slot="end" (click)="reducir(item)" *ngIf="item.carrito > 0" color="danger">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
