--- a/Ionic/src/app/list/list.page.scss
+++ b/Ionic/src/app/list/list.page.scss
@@ -2,9 +2,8 @@
   border-bottom:1px solid #ddd;
   color: black;
   font-weight: bold;
-//  background-color:#333;
 }
-ion-row:hover{
+ion-row:not(.gridHeader):hover{
   background-color: #f8c3a3;
   cursor: pointer;
 }
