--- a/Cliente/src/app/app.component.html
+++ b/Cliente/src/app/app.component.html
@@ -1,3 +1,36 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <!-- "when" puede ser "xs", "sm", "md", "lg", or "xl" -->
+  <ion-split-pane when="md" contentId="main">
+    <!--  menú lateral  -->
+    <ion-menu contentId="main">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-item>
+          <ion-label>Ventas</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Materiales</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Proveedores</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Capital</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Medios de pago</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Publicaciones ML</ion-label>
+        </ion-item>
+      </ion-content>
+    </ion-menu>
+
+    <!-- contenido principal -->
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
