--- a/Cliente/src/app/app.component.html
+++ b/Cliente/src/app/app.component.html
@@ -4,16 +4,21 @@
     <!--  menú lateral  -->
     <ion-menu contentId="main">
       <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
+        <ion-item>
+          <ion-icon name="person-circle" slot="start"></ion-icon>
+          <ion-label>Nombre de usuario</ion-label>
+        </ion-item>
       </ion-header>
       <ion-content>
-        <ion-item>
-          <ion-label>Ventas</ion-label>
+        <ion-item *ngFor="let p of Paginas; let i = index" (click)="indicePagina = i" routerDirection="root"
+          [routerLink]="[p.url]" lines="none" detail="false" [class.seleccionado]="indicePagina == i">
+          <ion-label>{{p.nombre}}</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Materiales</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Ejemplares</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Proveedores</ion-label>
