--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -1,9 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>material</ion-title>
+    <ion-searchbar></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item *ngFor="let item of Lista">
+      <div class="titulo">{{item.titulo}}</div>
+      <div class="autor">{{item.autor}}</div>
+      <div class="precio">{{item.precio}}</div>
+      <div class="stock">{{item.stock}}</div>
+    </ion-item>
+  </ion-list>
 
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="cargarMas($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando más datos...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
