--- a/Cliente/src/app/pages/material/material.page.scss
+++ b/Cliente/src/app/pages/material/material.page.scss
@@ -1,4 +1,4 @@
-ion-item{
+ion-item {
     margin-bottom: 5px;
 }
 
@@ -22,4 +22,11 @@ ion-item{
 
 .precio::before {
     content: "$";
+}
+
+@media screen and (min-width: 560px) {
+    .material{
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
