--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -5,6 +5,11 @@
 </ion-header>
 
 <ion-content>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="clickNuevo()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <ion-list>
     <ion-item *ngFor="let item of Lista">
       <div class="material">
