wip: nuevo material

--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -15,7 +15,7 @@
       <div class="material">
         <div class="principal">
           <div class="titulo">{{item.titulo}}</div>
-          <div class="autor">{{item.autor}}</div>
+          <div class="autor">{{item.nombreAutor}}</div>
         </div>
         <div class="extra">
           <div class="stock">{{item.stock}}</div>
