--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -18,7 +18,7 @@
           <div class="autor">{{item.nombreAutor}}</div>
         </div>
         <div class="extra">
-          <div class="stock">{{item.stock}}</div>
+          <div class="stock">{{item.stock ? item.stock : 0}}</div>
         </div>
       </div>
     </ion-item>
