--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -11,7 +11,7 @@
     </ion-fab-button>
   </ion-fab>
   <ion-list>
-    <ion-item *ngFor="let item of Lista">
+    <ion-item *ngFor="let item of Lista" (click)="click(item)" button>
       <div class="material">
         <div class="principal">
           <div class="titulo">{{item.titulo}}</div>
