css: margen de acciones

--- a/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
+++ b/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
@@ -21,7 +21,7 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" class="acciones">
       <ion-button (click)="clickCancelar()" color="danger">
         <ion-icon slot="icon-only" name="close-circle"></ion-icon>
       </ion-button>
