--- a/Cliente/src/app/pages/material/ver-material/ver-material.page.html
+++ b/Cliente/src/app/pages/material/ver-material/ver-material.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" class="acciones">
       <ion-button (click)="clickCerrar()">
         <ion-icon slot="icon-only" name="arrow-back-circle"></ion-icon>
       </ion-button>
