feat: ion-skeleton-text para mostrar feedback de carga

--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -10,7 +10,7 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-list>
+  <ion-list *ngIf="Lista">
     <ion-item *ngFor="let item of Lista" (click)="click(item)" button>
       <div class="material">
         <div class="principal">
@@ -19,6 +19,24 @@
         </div>
         <div class="extra">
           <div class="stock">{{item.stock ? item.stock : 0}}</div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-list>
+
+  <ion-list *ngIf="!Lista">
+    <ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">
+      <div class="material">
+        <div class="principal">
+          <div class="titulo">
+            <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+          </div>
+          <div class="autor">
+            <ion-skeleton-text animated style="width: 40%"></ion-skeleton-text>
+          </div>
+        </div>
+        <div class="extra">
+          <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
         </div>
       </div>
     </ion-item>
