--- a/Cliente/src/app/pages/material/ver-material/ver-material.page.html
+++ b/Cliente/src/app/pages/material/ver-material/ver-material.page.html
@@ -42,7 +42,12 @@
   </ion-item>
   <div class="extra">
     <div *ngIf="!Material">
-      <ion-spinner></ion-spinner>
+      <ion-item>
+        <ion-label>
+          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+        </ion-label>
+        <ion-skeleton-text animated style="width:50%"></ion-skeleton-text>
+      </ion-item>
     </div>
     <div *ngIf="Material">
       <ion-item>
