--- a/Cliente/src/app/pages/material/ver-material/ver-material.page.html
+++ b/Cliente/src/app/pages/material/ver-material/ver-material.page.html
@@ -5,10 +5,10 @@
         <ion-button (click)="clickCerrar()">
           <ion-icon slot="icon-only" name="arrow-back-circle"></ion-icon>
         </ion-button>
-        <ion-button (click)="clickEditar()" color="warning">
+        <ion-button [disabled]="Trabajando" (click)="clickEditar()" color="warning">
           <ion-icon slot="icon-only" name="create"></ion-icon>
         </ion-button>
-        <ion-button (click)="clickEliminar()" color="danger">
+        <ion-button [disabled]="Trabajando" (click)="clickEliminar()" color="danger">
           <ion-icon slot="icon-only" name="trash"></ion-icon>
         </ion-button>
       </ng-template>
@@ -16,11 +16,11 @@
         <ion-button (click)="clickCancelarEdicion()" color="danger">
           <ion-icon slot="icon-only" name="close-circle"></ion-icon>
         </ion-button>
-        <ion-button [disabled]="!MaterialEditado.titulo || Guardando" (click)="clickAceptarEdicion()" color="success">
+        <ion-button [disabled]="!MaterialEditado.titulo || Trabajando" (click)="clickAceptarEdicion()" color="success">
           <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
         </ion-button>
-        <ion-spinner [hidden]="!Guardando"></ion-spinner>
       </ng-template>
+      <ion-spinner [hidden]="!Trabajando"></ion-spinner>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
