--- a/Cliente/src/app/pages/material/material.page.html
+++ b/Cliente/src/app/pages/material/material.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-searchbar></ion-searchbar>
+    <ion-searchbar (ionChange)="busquedaCambiada()" [(ngModel)]="Busqueda"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
@@ -10,7 +10,7 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-list *ngIf="Lista">
+  <ion-list *ngIf="!Cargando">
     <ion-item *ngFor="let item of Lista" (click)="click(item)" button>
       <div class="material">
         <div class="principal">
@@ -24,7 +24,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-list *ngIf="!Lista">
+  <ion-list *ngIf="Cargando">
     <ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">
       <div class="material">
         <div class="principal">
