feat: agregados mas campos para nuevo material y verMaterial

--- a/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
+++ b/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
@@ -15,7 +15,23 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">Precio</ion-label>
-    <ion-input [(ngModel)]="datos.precio"></ion-input>
+    <ion-input [(ngModel)]="datos.precio" type="number"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">ISBN</ion-label>
+    <ion-input [(ngModel)]="datos.isbn"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">ISSN</ion-label>
+    <ion-input [(ngModel)]="datos.issn"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Edición</ion-label>
+    <ion-input [(ngModel)]="datos.edicion"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Ubicación</ion-label>
+    <ion-input [(ngModel)]="datos.ubicacion"></ion-input>
   </ion-item>
 </ion-content>
 
