--- a/Cliente/src/app/pages/material/ver-material/ver-material.page.html
+++ b/Cliente/src/app/pages/material/ver-material/ver-material.page.html
@@ -36,24 +36,44 @@
     <ion-text [hidden]="Editando" slot="end">{{MaterialLiviano.nombreAutor}}</ion-text>
     <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.nombreAutor"></ion-input>
   </ion-item>
-  <ion-item>
+  <ion-item [hidden]="Editando">
     <ion-label>Stock</ion-label>
     <ion-text>{{MaterialLiviano.stock ? MaterialLiviano.stock : 0}}</ion-text>
   </ion-item>
   <div class="extra">
-    <div *ngIf="!Material">
-      <ion-item>
-        <ion-label>
-          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
-        </ion-label>
-        <ion-skeleton-text animated style="width:50%"></ion-skeleton-text>
-      </ion-item>
-    </div>
     <div *ngIf="Material">
       <ion-item>
         <ion-label>Precio</ion-label>
         <ion-text [hidden]="Editando" slot="end">{{Material.precio}}</ion-text>
         <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.precio"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>ISBN</ion-label>
+        <ion-text [hidden]="Editando" slot="end">{{Material.isbn}}</ion-text>
+        <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.isbn"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>ISSN</ion-label>
+        <ion-text [hidden]="Editando" slot="end">{{Material.issn}}</ion-text>
+        <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.issn"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Edición</ion-label>
+        <ion-text [hidden]="Editando" slot="end">{{Material.edicion}}</ion-text>
+        <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.edicion"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Ubicación</ion-label>
+        <ion-text [hidden]="Editando" slot="end">{{Material.ubicacion}}</ion-text>
+        <ion-input *ngIf="Editando" [(ngModel)]="MaterialEditado.ubicacion"></ion-input>
+      </ion-item>
+    </div>
+    <div *ngIf="!Material">
+      <ion-item *ngFor="let i of [1,2,3,4,5]">
+        <ion-label>
+          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+        </ion-label>
+        <ion-skeleton-text animated style="width:50%"></ion-skeleton-text>
       </ion-item>
     </div>
   </div>
