--- a/Cliente/src/app/pages/ejemplar/ejemplar.page.html
+++ b/Cliente/src/app/pages/ejemplar/ejemplar.page.html
@@ -5,5 +5,48 @@
 </ion-header>
 
 <ion-content>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="ellipsis-vertical"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button (click)="clickEgreso()" color="danger">
+        <ion-icon name="remove"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="clickIngreso()" color="success">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-list *ngIf="!Cargando">
+    <ion-item *ngFor="let item of Lista" (click)="click(item)" button>
+      <div class="material">
+        <div class="principal">
+          <div class="titulo">{{item.titulo}}</div>
+          <div class="autor">{{item.nombreAutor}}</div>
+        </div>
+        <div class="extra">
+          <div class="stock">{{item.stock ? item.stock : 0}}</div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-list>
 
+  <ion-list *ngIf="Cargando">
+    <ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">
+      <div class="material">
+        <div class="principal">
+          <div class="titulo">
+            <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+          </div>
+          <div class="autor">
+            <ion-skeleton-text animated style="width: 40%"></ion-skeleton-text>
+          </div>
+        </div>
+        <div class="extra">
+          <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
+        </div>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
