--- a/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
+++ b/Cliente/src/app/pages/material/nuevo-material/nuevo-material.page.html
@@ -7,31 +7,31 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Título</ion-label>
-    <ion-input [(ngModel)]="datos.titulo"></ion-input>
+    <ion-input [(ngModel)]="Datos.titulo"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Nombre de autor</ion-label>
-    <ion-input [(ngModel)]="datos.nombreAutor"></ion-input>
+    <ion-input [(ngModel)]="Datos.nombreAutor"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Precio</ion-label>
-    <ion-input [(ngModel)]="datos.precio" type="number"></ion-input>
+    <ion-input [(ngModel)]="Datos.precio" type="number"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">ISBN</ion-label>
-    <ion-input [(ngModel)]="datos.isbn"></ion-input>
+    <ion-input [(ngModel)]="Datos.isbn"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">ISSN</ion-label>
-    <ion-input [(ngModel)]="datos.issn"></ion-input>
+    <ion-input [(ngModel)]="Datos.issn"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Edición</ion-label>
-    <ion-input [(ngModel)]="datos.edicion"></ion-input>
+    <ion-input [(ngModel)]="Datos.edicion"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Ubicación</ion-label>
-    <ion-input [(ngModel)]="datos.ubicacion"></ion-input>
+    <ion-input [(ngModel)]="Datos.ubicacion"></ion-input>
   </ion-item>
 </ion-content>
 
@@ -41,9 +41,10 @@
       <ion-button (click)="clickCancelar()" color="danger">
         <ion-icon slot="icon-only" name="close-circle"></ion-icon>
       </ion-button>
-      <ion-button [disabled]="!datos.titulo" (click)="clickAceptar()" color="success">
+      <ion-button [disabled]="!Datos.titulo || Trabajando" (click)="clickAceptar()" color="success">
         <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
       </ion-button>
+      <ion-spinner [hidden]="!Trabajando"></ion-spinner>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
