feat: selección de material en modal de ejemplar

--- a/Cliente/src/app/pages/ejemplar/movimiento-ejemplar/movimiento-ejemplar.page.html
+++ b/Cliente/src/app/pages/ejemplar/movimiento-ejemplar/movimiento-ejemplar.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <!-- Item as a Button -->
-  <ion-item button (click)="buttonClick()" detail>
+  <ion-item button (click)="clickMaterial()" detail>
     <ion-label *ngIf="!Material">
       Material
     </ion-label>
